--- a/arch/arm64/configs/odin2.config
+++ b/arch/arm64/configs/odin2.config
@@ -1,8 +1,4 @@
-# CONFIG_ACPI_APEI_PCIEAER is not set
-CONFIG_ACPI_BGRT=y
-# CONFIG_ACPI_CPPC_CPUFREQ is not set
-CONFIG_ACPI_FPDT=y
-CONFIG_ACPI_PCI_SLOT=y
+# CONFIG_ACPI is not set
 # CONFIG_AHCI_CEVA is not set
 # CONFIG_AHCI_DWC is not set
 CONFIG_ANDROID_BINDER_IPC=y
@@ -51,12 +47,11 @@ CONFIG_ARM64_VA_BITS=48
 CONFIG_ARM64_VA_BITS_48=y
 # CONFIG_ARM64_VA_BITS_52 is not set
 CONFIG_ARMV8_DEPRECATED=y
-CONFIG_ARM_CCI_PMU=y
-CONFIG_ARM_CCN=y
-CONFIG_ARM_CMN=y
-CONFIG_ARM_CORESIGHT_PMU_ARCH_SYSTEM_PMU=y
-CONFIG_ARM_DMC620_PMU=y
-CONFIG_ARM_DSU_PMU=y
+# CONFIG_ARM_CCI_PMU is not set
+# CONFIG_ARM_CCN is not set
+# CONFIG_ARM_CMN is not set
+# CONFIG_ARM_CORESIGHT_PMU_ARCH_SYSTEM_PMU is not set
+# CONFIG_ARM_DSU_PMU is not set
 # CONFIG_ARM_MHU is not set
 # CONFIG_ARM_QCOM_CPUFREQ_NVMEM is not set
 # CONFIG_ARM_SCMI_CPUFREQ is not set
@@ -66,23 +61,19 @@ CONFIG_ARM_SCMI_POWER_CONTROL=y
 CONFIG_ARM_SMMU_V3_PMU=y
 CONFIG_ARM_SPE_PMU=y
 # CONFIG_AT803X_PHY is not set
-# CONFIG_ATA_ACPI is not set
 # CONFIG_ATA_SFF is not set
 # CONFIG_ATA_VERBOSE_ERROR is not set
 # CONFIG_ATH10K is not set
-CONFIG_ATH11K=y
-# CONFIG_ATH11K_AHB is not set
-CONFIG_ATH11K_DEBUG=y
-CONFIG_ATH11K_PCI=y
+# CONFIG_ATH11K is not set
 CONFIG_ATH12K=y
-CONFIG_ATH_COMMON=y
 # CONFIG_AX88796B_PHY is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_KTZ8866=y
 # CONFIG_BACKLIGHT_LP855X is not set
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_BACKLIGHT_QCOM_WLED=y
-CONFIG_BATTERY_MAX17042=y
+# CONFIG_BATTERY_BQ27XXX is not set
+# CONFIG_BATTERY_MAX17042 is not set
 CONFIG_BATTERY_QCOM_BATTMGR=y
 CONFIG_BATTERY_SBS=y
 # CONFIG_BCM54140_PHY is not set
@@ -135,12 +126,12 @@ CONFIG_CFS_BANDWIDTH=y
 CONFIG_CGROUP_MISC=y
 CONFIG_CGROUP_NET_CLASSID=y
 CONFIG_CGROUP_RDMA=y
-CONFIG_CHARGER_BQ25890=y
-CONFIG_CHARGER_BQ25980=y
+# CONFIG_CHARGER_BQ25890 is not set
+# CONFIG_CHARGER_BQ25980 is not set
 # CONFIG_CHARGER_RK817 is not set
 CONFIG_CHECKPOINT_RESTORE=y
 # CONFIG_CHROME_PLATFORMS is not set
-CONFIG_CLK_GFM_LPASS_SM8250=y
+# CONFIG_CLK_GFM_LPASS_SM8250 is not set
 # CONFIG_CLK_X1E80100_CAMCC is not set
 # CONFIG_CLK_X1E80100_DISPCC is not set
 # CONFIG_CLK_X1E80100_GCC is not set
@@ -190,10 +181,6 @@ CONFIG_CRYPTO_DEFLATE=y
 CONFIG_CRYPTO_DES=y
 # CONFIG_CRYPTO_DEV_AMLOGIC_GXL is not set
 # CONFIG_CRYPTO_DEV_CCREE is not set
-# CONFIG_CRYPTO_DEV_HISI_HPRE is not set
-# CONFIG_CRYPTO_DEV_HISI_SEC2 is not set
-# CONFIG_CRYPTO_DEV_HISI_TRNG is not set
-# CONFIG_CRYPTO_DEV_HISI_ZIP is not set
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCOM_RNG=y
 CONFIG_CRYPTO_DH=y
@@ -388,20 +375,16 @@ CONFIG_HID_LOGITECH_HIDPP=y
 CONFIG_HID_MULTITOUCH=y
 CONFIG_HID_NINTENDO=y
 CONFIG_HID_RMI=y
-# CONFIG_HISI_PMU is not set
 # CONFIG_HOTPLUG_PCI is not set
 # CONFIG_HTE is not set
-CONFIG_HZ=1000
-CONFIG_HZ_1000=y
-# CONFIG_HZ_250 is not set
 # CONFIG_I2C_CADENCE is not set
+# CONFIG_I2C_DESIGNWARE_PLATFORM is not set
 CONFIG_I2C_GPIO=y
-CONFIG_I2C_HID_ACPI=y
 CONFIG_I2C_HID_CORE=y
 CONFIG_I2C_HID_OF=y
-CONFIG_I2C_NVIDIA_GPU=y
-CONFIG_I2C_QCOM_CCI=y
+# CONFIG_I2C_QCOM_CCI is not set
 CONFIG_I2C_QCOM_GENI=y
+# CONFIG_I2C_QUP is not set
 # CONFIG_I2C_RK3X is not set
 CONFIG_IDLE_PAGE_TRACKING=y
 CONFIG_IFB=y
@@ -411,9 +394,7 @@ CONFIG_IIO_BUFFER_DMAENGINE=y
 CONFIG_IIO_BUFFER_HW_CONSUMER=y
 CONFIG_IIO_CONFIGFS=y
 CONFIG_IIO_KFIFO_BUF=y
-CONFIG_IIO_ST_LSM6DSX=y
-CONFIG_IIO_ST_LSM6DSX_I2C=y
-CONFIG_IIO_ST_LSM6DSX_SPI=y
+# CONFIG_IIO_ST_LSM6DSX is not set
 # CONFIG_IIO_ST_MAGN_3AXIS is not set
 CONFIG_IIO_TRIGGERED_BUFFER=y
 CONFIG_IMA=y
@@ -422,9 +403,9 @@ CONFIG_IMA_SECURE_AND_OR_TRUSTED_BOOT=y
 CONFIG_INET_TUNNEL=y
 # CONFIG_INITRAMFS_PRESERVE_MTIME is not set
 CONFIG_INPUT_JOYSTICK=y
-CONFIG_INPUT_PM8XXX_VIBRATOR=y
-CONFIG_INPUT_PWM_BEEPER=y
-CONFIG_INPUT_PWM_VIBRA=y
+# CONFIG_INPUT_PM8XXX_VIBRATOR is not set
+# CONFIG_INPUT_PWM_BEEPER is not set
+# CONFIG_INPUT_PWM_VIBRA is not set
 CONFIG_INPUT_QCOM_HV_HAPTICS=y
 # CONFIG_INPUT_RK805_PWRKEY is not set
 CONFIG_INTEGRITY_SIGNATURE=y
@@ -439,9 +420,12 @@ CONFIG_INTERCONNECT_QCOM_OSM_L3=y
 # CONFIG_INTERCONNECT_QCOM_SC7280 is not set
 # CONFIG_INTERCONNECT_QCOM_SC8180X is not set
 # CONFIG_INTERCONNECT_QCOM_SC8280XP is not set
+# CONFIG_INTERCONNECT_QCOM_SDM845 is not set
 # CONFIG_INTERCONNECT_QCOM_SDX75 is not set
 # CONFIG_INTERCONNECT_QCOM_SM8150 is not set
-CONFIG_INTERCONNECT_QCOM_SM8350=y
+# CONFIG_INTERCONNECT_QCOM_SM8250 is not set
+# CONFIG_INTERCONNECT_QCOM_SM8350 is not set
+# CONFIG_INTERCONNECT_QCOM_SM8450 is not set
 # CONFIG_INTERCONNECT_QCOM_SM8650 is not set
 # CONFIG_INTERCONNECT_QCOM_X1E80100 is not set
 # CONFIG_IOMMU_IO_PGTABLE_DART is not set
@@ -503,6 +487,7 @@ CONFIG_LATENCYTOP=y
 CONFIG_LEDS_CLASS_MULTICOLOR=y
 CONFIG_LEDS_LM3692X=y
 CONFIG_LEDS_PCA9532=y
+CONFIG_LEDS_PWM_MULTICOLOR=y
 CONFIG_LEDS_QCOM_LPG=y
 CONFIG_LIBCRC32C=y
 CONFIG_LIRC=y
@@ -555,7 +540,6 @@ CONFIG_MMC_BLOCK_MINORS=8
 # CONFIG_MMC_DW is not set
 CONFIG_MMC_HSQ=y
 # CONFIG_MMC_MTK is not set
-# CONFIG_MMC_SDHCI_ACPI is not set
 # CONFIG_MMC_SDHCI_CADENCE is not set
 # CONFIG_MMC_SDHCI_F_SDH30 is not set
 # CONFIG_MMC_SDHCI_OF_ARASAN is not set
@@ -753,8 +737,6 @@ CONFIG_NF_TPROXY_IPV4=y
 CONFIG_NF_TPROXY_IPV6=y
 CONFIG_NODES_SHIFT=9
 CONFIG_NO_HZ=y
-CONFIG_NO_HZ_FULL=y
-# CONFIG_NO_HZ_IDLE is not set
 CONFIG_NTFS3_FS=y
 # CONFIG_NVMEM_LAYOUT_SL28_VPD is not set
 CONFIG_NVMEM_REBOOT_MODE=y
@@ -805,16 +787,15 @@ CONFIG_PHY_QCOM_EUSB2_REPEATER=y
 CONFIG_PHY_QCOM_QMP=y
 CONFIG_PHY_QCOM_QMP_COMBO=y
 CONFIG_PHY_QCOM_QMP_PCIE=y
-CONFIG_PHY_QCOM_QMP_PCIE_8996=y
+# CONFIG_PHY_QCOM_QMP_PCIE_8996 is not set
 CONFIG_PHY_QCOM_QMP_UFS=y
 CONFIG_PHY_QCOM_QMP_USB=y
-CONFIG_PHY_QCOM_QMP_USB_LEGACY=y
-CONFIG_PHY_QCOM_QUSB2=y
+# CONFIG_PHY_QCOM_QUSB2 is not set
 # CONFIG_PHY_QCOM_SGMII_ETH is not set
 CONFIG_PHY_QCOM_SNPS_EUSB2=y
 # CONFIG_PHY_QCOM_USB_HS is not set
 # CONFIG_PHY_QCOM_USB_HS_28NM is not set
-CONFIG_PHY_QCOM_USB_SNPS_FEMTO_V2=y
+# CONFIG_PHY_QCOM_USB_SNPS_FEMTO_V2 is not set
 # CONFIG_PHY_QCOM_USB_SS is not set
 # CONFIG_PINCTRL_IPQ5018 is not set
 # CONFIG_PINCTRL_IPQ5332 is not set
@@ -830,7 +811,6 @@ CONFIG_PINCTRL_LPASS_LPI=y
 # CONFIG_PINCTRL_MSM8998 is not set
 # CONFIG_PINCTRL_QCM2290 is not set
 # CONFIG_PINCTRL_QCS404 is not set
-# CONFIG_PINCTRL_QDF2XXX is not set
 # CONFIG_PINCTRL_QDU1000 is not set
 # CONFIG_PINCTRL_RK805 is not set
 # CONFIG_PINCTRL_SA8775P is not set
@@ -885,10 +865,12 @@ CONFIG_PWM_SN3112=y
 CONFIG_QCOM_APR=y
 # CONFIG_QCOM_CLK_APCC_MSM8996 is not set
 # CONFIG_QCOM_CLK_APCS_MSM8916 is not set
+# CONFIG_QCOM_CLK_SMD_RPM is not set
 CONFIG_QCOM_COINCELL=y
 # CONFIG_QCOM_EBI2 is not set
 CONFIG_QCOM_FASTRPC=y
 CONFIG_QCOM_GPI_DMA=y
+# CONFIG_QCOM_HFPLL is not set
 CONFIG_QCOM_ICC_BWMON=y
 CONFIG_QCOM_IPA=y
 CONFIG_QCOM_LLCC=y
@@ -1000,7 +982,8 @@ CONFIG_RTW88=y
 # CONFIG_SATA_AHCI_PLATFORM is not set
 # CONFIG_SATA_PMP is not set
 # CONFIG_SATA_SIL24 is not set
-CONFIG_SA_GPUCC_8775P=y
+# CONFIG_SA_GCC_8775P is not set
+# CONFIG_SA_GPUCC_8775P is not set
 CONFIG_SCHEDSTATS=y
 CONFIG_SCHED_CORE=y
 CONFIG_SCHED_DEBUG=y
@@ -1015,11 +998,19 @@ CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_SCSI_UFS_HWMON=y
 CONFIG_SCSI_UFS_QCOM=y
 # CONFIG_SC_CAMCC_8280XP is not set
-CONFIG_SC_DISPCC_8280XP=y
-CONFIG_SC_GPUCC_8280XP=y
-CONFIG_SC_LPASSCC_8280XP=y
-CONFIG_SDM_CAMCC_845=y
-CONFIG_SDM_LPASSCC_845=y
+# CONFIG_SC_DISPCC_8280XP is not set
+# CONFIG_SC_GCC_7180 is not set
+# CONFIG_SC_GCC_7280 is not set
+# CONFIG_SC_GCC_8180X is not set
+# CONFIG_SC_GCC_8280XP is not set
+# CONFIG_SC_GPUCC_8280XP is not set
+# CONFIG_SC_LPASSCC_8280XP is not set
+# CONFIG_SDM_CAMCC_845 is not set
+# CONFIG_SDM_DISPCC_845 is not set
+# CONFIG_SDM_GCC_845 is not set
+# CONFIG_SDM_GPUCC_845 is not set
+# CONFIG_SDM_LPASSCC_845 is not set
+# CONFIG_SDM_VIDEOCC_845 is not set
 # CONFIG_SDX_GCC_75 is not set
 CONFIG_SECURITY_LANDLOCK=y
 CONFIG_SECURITY_LOCKDOWN_LSM=y
@@ -1029,7 +1020,7 @@ CONFIG_SECURITY_YAMA=y
 CONFIG_SENSORS_GPIO_FAN=y
 CONFIG_SENSORS_INA2XX=y
 CONFIG_SENSORS_INA3221=y
-CONFIG_SENSORS_ISL29018=y
+# CONFIG_SENSORS_ISL29018 is not set
 CONFIG_SENSORS_JC42=y
 CONFIG_SENSORS_LM75=y
 CONFIG_SENSORS_LM90=y
@@ -1048,35 +1039,29 @@ CONFIG_SLIMBUS=y
 CONFIG_SLIM_QCOM_CTRL=y
 CONFIG_SLIM_QCOM_NGD_CTRL=y
 CONFIG_SMSC_PHY=y
-CONFIG_SM_CAMCC_8250=y
+# CONFIG_SM_CAMCC_8250 is not set
 CONFIG_SM_CAMCC_8550=y
-# CONFIG_SM_DISPCC_8450 is not set
 CONFIG_SM_DISPCC_8550=y
 # CONFIG_SM_DISPCC_8650 is not set
 # CONFIG_SM_GCC_4450 is not set
 # CONFIG_SM_GCC_6115 is not set
 # CONFIG_SM_GCC_8150 is not set
+# CONFIG_SM_GCC_8250 is not set
+# CONFIG_SM_GCC_8350 is not set
+# CONFIG_SM_GCC_8450 is not set
 # CONFIG_SM_GCC_8650 is not set
 # CONFIG_SM_GPUCC_6115 is not set
 # CONFIG_SM_GPUCC_8150 is not set
-CONFIG_SM_GPUCC_8350=y
+# CONFIG_SM_GPUCC_8250 is not set
 # CONFIG_SM_GPUCC_8450 is not set
 CONFIG_SM_GPUCC_8550=y
 # CONFIG_SM_GPUCC_8650 is not set
 # CONFIG_SM_TCSRCC_8650 is not set
-CONFIG_SM_VIDEOCC_8350=y
+# CONFIG_SM_VIDEOCC_8250 is not set
 CONFIG_SM_VIDEOCC_8550=y
 # CONFIG_SND_ALOOP is not set
 CONFIG_SND_AUDIO_GRAPH_CARD=y
 CONFIG_SND_AUDIO_GRAPH_CARD2=y
-CONFIG_SND_HDA=y
-CONFIG_SND_HDA_CODEC_HDMI=y
-CONFIG_SND_HDA_CORE=y
-CONFIG_SND_HDA_GENERIC=y
-CONFIG_SND_HDA_HWDEP=y
-CONFIG_SND_HDA_INTEL=y
-CONFIG_SND_HDA_PATCH_LOADER=y
-CONFIG_SND_HDA_RECONFIG=y
 CONFIG_SND_SIMPLE_CARD=y
 CONFIG_SND_SIMPLE_CARD_UTILS=y
 # CONFIG_SND_SOC_ADAU7002 is not set
@@ -1084,8 +1069,6 @@ CONFIG_SND_SIMPLE_CARD_UTILS=y
 # CONFIG_SND_SOC_APQ8016_SBC is not set
 CONFIG_SND_SOC_AW883XX=y
 # CONFIG_SND_SOC_BT_SCO is not set
-# CONFIG_SND_SOC_CROS_EC_CODEC is not set
-CONFIG_SND_SOC_CS35L41_I2C=y
 # CONFIG_SND_SOC_DA7213 is not set
 # CONFIG_SND_SOC_DMIC is not set
 # CONFIG_SND_SOC_ES7134 is not set
@@ -1108,7 +1091,7 @@ CONFIG_SND_SOC_LPASS_VA_MACRO=y
 CONFIG_SND_SOC_LPASS_WSA_MACRO=y
 # CONFIG_SND_SOC_MAX98357A is not set
 # CONFIG_SND_SOC_MAX98390 is not set
-CONFIG_SND_SOC_MAX98927=y
+# CONFIG_SND_SOC_MAX98927 is not set
 # CONFIG_SND_SOC_MSM8916_WCD_ANALOG is not set
 # CONFIG_SND_SOC_MSM8916_WCD_DIGITAL is not set
 # CONFIG_SND_SOC_MSM8996 is not set
@@ -1134,18 +1117,16 @@ CONFIG_SND_SOC_QDSP6_PRM=y
 CONFIG_SND_SOC_QDSP6_PRM_LPASS_CLOCKS=y
 CONFIG_SND_SOC_QDSP6_ROUTING=y
 # CONFIG_SND_SOC_RK817 is not set
-CONFIG_SND_SOC_RL6231=y
 # CONFIG_SND_SOC_RT5640 is not set
 # CONFIG_SND_SOC_RT5659 is not set
-CONFIG_SND_SOC_RT5663=y
 # CONFIG_SND_SOC_SC7180 is not set
 # CONFIG_SND_SOC_SC7280 is not set
 CONFIG_SND_SOC_SC8280XP=y
-CONFIG_SND_SOC_SDM845=y
+# CONFIG_SND_SOC_SDM845 is not set
 # CONFIG_SND_SOC_SGTL5000 is not set
 CONFIG_SND_SOC_SIMPLE_AMPLIFIER=y
 CONFIG_SND_SOC_SIMPLE_MUX=y
-CONFIG_SND_SOC_SM8250=y
+# CONFIG_SND_SOC_SM8250 is not set
 # CONFIG_SND_SOC_SOF_MTK_TOPLEVEL is not set
 # CONFIG_SND_SOC_SPDIF is not set
 # CONFIG_SND_SOC_TAS2552 is not set
@@ -1155,7 +1136,7 @@ CONFIG_SND_SOC_SM8250=y
 # CONFIG_SND_SOC_TLV320AIC3X_I2C is not set
 # CONFIG_SND_SOC_TS3A227E is not set
 # CONFIG_SND_SOC_WCD9335 is not set
-CONFIG_SND_SOC_WCD934X=y
+# CONFIG_SND_SOC_WCD934X is not set
 CONFIG_SND_SOC_WCD938X=y
 CONFIG_SND_SOC_WCD938X_SDW=y
 # CONFIG_SND_SOC_WCD939X_SDW is not set
@@ -1201,13 +1182,13 @@ CONFIG_SYSFB_SIMPLEFB=y
 CONFIG_TAP=y
 CONFIG_TARGET_CORE=y
 CONFIG_TASK_DELAY_ACCT=y
-CONFIG_TCG_CRB=y
 CONFIG_TCG_TIS=y
 CONFIG_TCG_TIS_CORE=y
 # CONFIG_TCG_TIS_I2C_CR50 is not set
 # CONFIG_TCG_TIS_I2C_INFINEON is not set
 # CONFIG_TCG_TIS_SPI is not set
 CONFIG_THERMAL_NETLINK=y
+# CONFIG_TICK_CPU_ACCOUNTING is not set
 CONFIG_TI_ADS1015=y
 CONFIG_TMPFS_INODE64=y
 CONFIG_TOUCHSCREEN_ATMEL_MXT=y
@@ -1247,7 +1228,6 @@ CONFIG_USB_CONFIGFS=y
 CONFIG_USB_CONFIGFS_F_HID=y
 # CONFIG_USB_DWC2 is not set
 # CONFIG_USB_DWC3_HAPS is not set
-# CONFIG_USB_DWC3_PCI is not set
 CONFIG_USB_DWC3_ULPI=y
 CONFIG_USB_F_ACM=y
 CONFIG_USB_F_ECM=y
@@ -1309,7 +1289,7 @@ CONFIG_V4L2_ASYNC=y
 CONFIG_V4L2_FWNODE=y
 CONFIG_V4L2_MEM2MEM_DEV=y
 CONFIG_VALIDATE_FS_PARSER=y
-CONFIG_VCNL4000=y
+# CONFIG_VCNL4000 is not set
 CONFIG_VETH=y
 # CONFIG_VEXPRESS_CONFIG is not set
 # CONFIG_VFIO_PCI is not set
@@ -1322,7 +1302,6 @@ CONFIG_VIDEOBUF2_VMALLOC=y
 CONFIG_VIDEO_ADV_DEBUG=y
 # CONFIG_VIDEO_CADENCE_CSI2RX is not set
 CONFIG_VIDEO_DEV=y
-CONFIG_VIDEO_HI846=y
 # CONFIG_VIDEO_IMX219 is not set
 # CONFIG_VIDEO_IMX412 is not set
 CONFIG_VIDEO_IR_I2C=y
@@ -1331,7 +1310,7 @@ CONFIG_VIDEO_MUX=y
 # CONFIG_VIDEO_OV5640 is not set
 # CONFIG_VIDEO_OV5645 is not set
 # CONFIG_VIDEO_QCOM_CAMSS is not set
-# CONFIG_VIDEO_QCOM_IRIS is not set
+CONFIG_VIDEO_QCOM_IRIS=y
 # CONFIG_VIDEO_QCOM_VENUS is not set
 # CONFIG_VIRTIO_MENU is not set
 CONFIG_VIRT_CPU_ACCOUNTING_GEN=y
@@ -1369,7 +1348,6 @@ CONFIG_ZONE_DEVICE=y
 CONFIG_ZRAM=y
 CONFIG_ZSTD_COMPRESS=y
 CONFIG_ZSWAP=y
-# CONFIG_ACPI_NFIT is not set
 CONFIG_ANDROID_BINDERFS=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
@@ -1379,7 +1357,6 @@ CONFIG_ARCH_HAS_ZONE_DMA_SET=y
 CONFIG_ARM64_PA_BITS_48=y
 CONFIG_ASM_MODVERSIONS=y
 CONFIG_ASN1_ENCODER=y
-# CONFIG_ATH11K_TRACING is not set
 # CONFIG_ATH12K_TRACING is not set
 CONFIG_BIG_KEYS=y
 CONFIG_BLK_DEBUG_FS_ZONED=y
@@ -1457,7 +1434,6 @@ CONFIG_DEFAULT_SECURITY_SELINUX=y
 CONFIG_DEVICE_MIGRATION=y
 CONFIG_DEVICE_PRIVATE=y
 # CONFIG_DEV_DAX is not set
-# CONFIG_DEV_DAX_HMEM is not set
 # CONFIG_DLM_DEBUG is not set
 # CONFIG_DM_INIT is not set
 # CONFIG_DM_ZONED is not set
@@ -1519,7 +1495,6 @@ CONFIG_FUNCTION_GRAPH_RETVAL=y
 CONFIG_FUNCTION_GRAPH_TRACER=y
 CONFIG_FUNCTION_PROFILER=y
 CONFIG_FUNCTION_TRACER=y
-CONFIG_FW_CS_DSP=y
 CONFIG_FW_LOADER_COMPRESS_XZ=y
 CONFIG_FW_LOADER_COMPRESS_ZSTD=y
 CONFIG_FW_LOADER_DEBUG=y
@@ -1542,7 +1517,6 @@ CONFIG_HID_LOGITECH_DJ=y
 CONFIG_HIST_TRIGGERS=y
 # CONFIG_HIST_TRIGGERS_DEBUG is not set
 CONFIG_HWLAT_TRACER=y
-CONFIG_I2C_CCGX_UCSI=y
 CONFIG_IMA_APPRAISE=y
 CONFIG_IMA_APPRAISE_BOOTPARAM=y
 # CONFIG_IMA_APPRAISE_BUILD_POLICY is not set
@@ -1747,9 +1721,6 @@ CONFIG_PROC_EVENTS=y
 CONFIG_PTDUMP_CORE=y
 CONFIG_QCOM_INLINE_CRYPTO_ENGINE=y
 # CONFIG_QCOM_PMIC_PDCHARGER_ULOG is not set
-# CONFIG_RCU_LAZY is not set
-CONFIG_RCU_NOCB_CPU=y
-# CONFIG_RCU_NOCB_CPU_DEFAULT_ALL is not set
 # CONFIG_REMOTE_TARGET is not set
 CONFIG_RING_BUFFER=y
 # CONFIG_RING_BUFFER_BENCHMARK is not set
@@ -1806,23 +1777,16 @@ CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_SID2STR_CACHE_SIZE=256
 CONFIG_SECURITY_SELINUX_SIDTAB_HASH_BITS=9
+# CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SERIAL_KGDB_NMI is not set
 CONFIG_SETEND_EMULATION=y
 CONFIG_SGETMASK_SYSCALL=y
 CONFIG_SIGNATURE=y
 # CONFIG_SLUB_TINY is not set
-# CONFIG_SND_HDA_CTL_DEV_ID is not set
-# CONFIG_SND_HDA_INTEL_HDMI_SILENT_STREAM is not set
 CONFIG_SND_HWDEP=y
-CONFIG_SND_INTEL_DSP_CONFIG=y
-CONFIG_SND_INTEL_NHLT=y
-CONFIG_SND_INTEL_SOUNDWIRE_ACPI=y
 CONFIG_SND_RAWMIDI=y
 CONFIG_SND_SOC_AW88395_LIB=y
-CONFIG_SND_SOC_CS35L41=y
-CONFIG_SND_SOC_CS35L41_LIB=y
 # CONFIG_SND_SOC_SDW_MOCKUP is not set
-CONFIG_SND_SOC_WM_ADSP=y
 CONFIG_SND_UMP=y
 # CONFIG_SND_UMP_LEGACY_RAWMIDI is not set
 CONFIG_SND_USB_AUDIO_MIDI_V2=y
@@ -1933,7 +1897,6 @@ CONFIG_USERMODE_DRIVER=y
 # CONFIG_VIDEO_WM8739 is not set
 # CONFIG_VIDEO_WM8775 is not set
 CONFIG_VIRT_CPU_ACCOUNTING=y
-CONFIG_VMGENID=y
 # CONFIG_VMLINUX_MAP is not set
 CONFIG_Z3FOLD=y
 CONFIG_ZBUD=y
