config: Update odin2 config
Signed-off-by: Xilin Wu <wuxilin123@gmail.com>

--- a/arch/arm64/configs/odin2.config
+++ b/arch/arm64/configs/odin2.config
@@ -771,7 +771,6 @@ CONFIG_PCIEASPM_POWER_SUPERSAVE=y
 # CONFIG_PCI_PASID is not set
 CONFIG_PCI_PWRCTL=y
 CONFIG_PCI_PWRCTL_PWRSEQ=y
-CONFIG_PCI_PWRCTL_WCN7850=y
 # CONFIG_PCI_XGENE is not set
 CONFIG_PERSISTENT_KEYRINGS=y
 CONFIG_PGTABLE_LEVELS=4
@@ -846,7 +845,7 @@ CONFIG_POWER_RESET_QCOM_PON=y
 # CONFIG_POWER_RESET_SYSCON_POWEROFF is not set
 # CONFIG_POWER_RESET_XGENE is not set
 CONFIG_POWER_SEQUENCING=y
-# CONFIG_POWER_SEQUENCING_QCA6390 is not set
+CONFIG_POWER_SEQUENCING_QCOM_WCN=y
 # CONFIG_PREEMPT is not set
 CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_PREEMPT_VOLUNTARY=y
@@ -889,6 +888,7 @@ CONFIG_QCOM_QMI_HELPERS=y
 # CONFIG_QCOM_QSEECOM_UEFISECAPP is not set
 CONFIG_QCOM_RMTFS_MEM=y
 CONFIG_QCOM_RPROC_COMMON=y
+CONFIG_QCOM_RPROC_MINIDUMP=y
 CONFIG_QCOM_SOCINFO=y
 CONFIG_QCOM_SPM=y
 CONFIG_QCOM_SPMI_ADC5=y
@@ -1261,7 +1261,6 @@ CONFIG_USB_NET_RNDIS_HOST=y
 CONFIG_USB_NET_SMSC95XX=y
 # CONFIG_USB_NET_SR9800 is not set
 # CONFIG_USB_NET_ZAURUS is not set
-CONFIG_USB_ONBOARD_HUB=y
 # CONFIG_USB_PEGASUS is not set
 # CONFIG_USB_QCOM_EUD is not set
 # CONFIG_USB_RTL8150 is not set
@@ -1357,6 +1356,7 @@ CONFIG_ARCH_HAS_ZONE_DMA_SET=y
 CONFIG_ARM64_PA_BITS_48=y
 CONFIG_ASM_MODVERSIONS=y
 CONFIG_ASN1_ENCODER=y
+# CONFIG_ATH12K_DEBUG is not set
 # CONFIG_ATH12K_TRACING is not set
 CONFIG_BIG_KEYS=y
 CONFIG_BLK_DEBUG_FS_ZONED=y
@@ -1442,6 +1442,7 @@ CONFIG_DEVICE_PRIVATE=y
 # CONFIG_DRM_DEBUG_MODESET_LOCK is not set
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
 # CONFIG_DRM_MSM_GPU_SUDO is not set
+# CONFIG_DRM_WERROR is not set
 CONFIG_DYNAMIC_EVENTS=y
 CONFIG_DYNAMIC_FTRACE=y
 CONFIG_DYNAMIC_FTRACE_WITH_ARGS=y
@@ -1618,6 +1619,7 @@ CONFIG_MODULE_SIG_FORMAT=y
 CONFIG_MODULE_SIG_HASH="sha256"
 CONFIG_MODULE_SIG_KEY="certs/signing_key.pem"
 CONFIG_MODULE_SIG_KEY_TYPE_RSA=y
+# CONFIG_MODULE_SIG_SHA1 is not set
 CONFIG_MODULE_SIG_SHA256=y
 # CONFIG_MODULE_SIG_SHA384 is not set
 # CONFIG_MODULE_SIG_SHA3_256 is not set
@@ -1739,6 +1741,7 @@ CONFIG_RMI4_F55=y
 CONFIG_RMI4_I2C=y
 # CONFIG_RMI4_SMB is not set
 # CONFIG_RMI4_SPI is not set
+# CONFIG_RTW88_8723CS is not set
 # CONFIG_RTW88_8723DE is not set
 # CONFIG_RTW88_8723DS is not set
 # CONFIG_RTW88_8723DU is not set
